--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   margin: 20px;
 }
   header{
-   background-image: url('https://knews.kg/wp-content/uploads/2017/09/BEK_2476.jpg');
+   background-image: url('');
      height: 450px;
      background-repeat: no-repeat;
      background-size: blue ;
